--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,11 @@ html, body {
   font-family: 'Open Sans', sans-serif!important;
 }
 
+html, body {
+  height: 100%;
+  overflow-x: hidden; /* pero no overflow-y */
+}
+
 h1,h2,h3,h4,h5,h6  {
   font-weight: 600!important;
 }
